--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "graphql": "^15.4.0",
     "headroom.js": "0.11.0",
     "moment": "2.24.0",
-    "node-sass": "4.13.1",
+    "node-sass": "^6.0.1",
     "nouislider": "14.1.1",
     "react": "16.12.0",
     "react-datetime": "2.16.3",
